--- a/completion.html
+++ b/completion.html
@@ -10,7 +10,8 @@
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script> -->
 		<script src="js/html2canvas0.5.0.js" type="text/javascript"></script>
 		<script src="js/html2canvas_min.js" type="text/javascript"></script>
-		<script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script>
+		<!-- <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script> -->
+		<script src="js/xlsx-0.20.2.full.min.js" type="text/javascript"></script>
 		<script src="js/jquery-3.6.1.min.js"></script>
 		<script src="js/CommonFunctions.js"></script>
 		<script src="js/sql-wasm.js"></script>
