--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<script src="js/jquery-3.6.1.min.js"></script>
 		<script src="js/CommonFunctions.js"></script>
 		<script src="js/sql-wasm.js"></script>
-		<script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script>
+		<!-- <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script> -->
+		<script src="js/xlsx-0.20.2.full.min.js" type="text/javascript"></script>
 		<link rel="icon" href="favicon.ico" />
 	</head>
 	<body>
