--- a/b30gen.html
+++ b/b30gen.html
@@ -8,7 +8,7 @@
 		<!-- <script src="js/html2canvas.js"></script> -->
 		<!-- <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script> -->
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script> -->
-		<script src="js/html2canvas0.5.0.js" type="text/javascript"></script>
+		<!-- <script src="js/html2canvas0.5.0.js" type="text/javascript"></script> -->
 		<script src="js/html2canvas_min.js" type="text/javascript"></script>
 		<!-- <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script> -->
 		<script src="js/xlsx-0.20.2.full.min.js" type="text/javascript"></script>
@@ -251,6 +251,17 @@
 				<div class="setting-row">
 					<div class="setting-container">
 						<button class="setting-button" onclick="saveAsImage('mainCapture')">生成图片</button>
+					</div>
+				</div>
+				
+				<div class="setting-row">
+					<div class="setting-container">
+						<label for="switch-losescore">显示形式</label>
+						<select id="switch-losescore">
+							<option value="0">pure-far-lost</option>
+							<option value="1">仅失分数</option>
+							<option value="2">小p数-等效far数</option>
+						</select>
 					</div>
 				</div>
 
