更正定数，微调样式，优化万能查分表数据填写部分

--- a/b30gen.html
+++ b/b30gen.html
@@ -320,8 +320,8 @@
 					</div>
 				</div>
 				<div id="modify-window-buttons">
-					<div id="modify-window-accept" class="accept-btn" onclick="acceptModifyResult(currentArray)">√</div>
-					<div id="modify-window-refuse" class="refuse-btn" onclick="abortModifyResult()">X</div>
+					<div id="modify-window-accept" class="accept-btn" onclick="acceptModifyResult(currentArray)">✔</div>
+					<div id="modify-window-refuse" class="refuse-btn" onclick="abortModifyResult()">❌</div>
 				</div>
 			</div>
 		</div>
