--- a/completion.html
+++ b/completion.html
@@ -319,8 +319,8 @@
 					</div> -->
 				</div>
 				<div id="modify-window-buttons">
-					<!-- <div id="modify-window-accept" class="accept-btn" onclick="acceptModifyResult(currentArray)">√</div> -->
-					<div id="modify-window-refuse" class="refuse-btn" onclick="abortModifyResult()">X</div>
+					<!-- <div id="modify-window-accept" class="accept-btn" onclick="acceptModifyResult(currentArray)">正确</div> -->
+					<div id="modify-window-refuse" class="refuse-btn" onclick="abortModifyResult()">错误</div>
 				</div>
 			</div>
 		</div>
