--- a/fakeResult.html
+++ b/fakeResult.html
@@ -5,9 +5,6 @@
 		<title>自定义成绩图</title>
 		<script src="js/jquery-3.6.1.min.js"></script>
 		<link rel="stylesheet" href="css/fakeResult.css" type="text/css" />
-		<!-- <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.js"></script> -->
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.3.2/html2canvas.min.js"></script> -->
-		<script src="js/html2canvas0.5.0.js" type="text/javascript"></script>
 		<script src="js/html2canvas_min.js" type="text/javascript"></script>
 		<script src="js/fakeResult.js" type="text/javascript"></script>
 	</head>
@@ -20,6 +17,7 @@
 			<div id="top-bar">
 				<span id="result">结果</span>
 				<img id="top-bar-background" src="img/topbar/top_bar_bg.png" />
+				<img id="top-bar-background-right" src="img/topbar/top_bar_bg_right.png" />
 				<!-- <img id=""/> -->
 				<div id="sync-button">
 					<img id="sync-background" src="img/layout/top_button_settings.png" />
@@ -78,9 +76,11 @@
 					<span id="maxrecall">1065</span>
 				</div>
 				<div id="illustration"> </div>
-				<img id="hp-base" src="img/hpBar/hp_base.png" />
-				<img id="hp-bar" src="img/hpBar/hp_bar_clear.png" />
-				<img id="hp-bar-grid" src="img/hpBar/hp_grid.png" />
+				<div id="hp-part">
+					<img id="hp-base" src="img/hpBar/hp_base.png" />
+					<img id="hp-bar" src="img/hpBar/hp_bar_clear.png" />
+					<img id="hp-bar-grid" src="img/hpBar/hp_grid.png" />
+				</div>
 				<!-- <img id="hp-bar-top" src="img/hpbar/hp_top.png" /> -->
 				<span id="hp-value">100</span>
 				<div id="score-panel">
