更新v6.2.6新曲，修复潜力值输入超过两位小数自动四舍五入的问题

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 			<div id="result-area">
 				<div id="notice">
 					<div id="version">
-						<label>当前曲目数据库版本：<span>6.1.0</span></label><br />
-						<label>当前曲绘文件库版本：<span>6.1.0</span></label><br />
+						<label>当前曲目数据库版本：<span>6.2.6</span></label><br />
+						<label>当前曲绘文件库版本：<span>6.2.6</span></label><br />
 						<label style="text-decoration: line-through;opacity: 0.3;">当前手填表文件版本：<span>5.6.0</span></label><br />
-						<label>当前万能查分表版本：<span>6.1.0</span></label>
+						<label>当前万能查分表版本：<span>6.1.0</span> <i style="text-decoration: line-through;">最近比较忙更新缓慢见谅！</i></label>
 						<!-- <a href="sample/模板.csv" style="text-decoration: none;"><button class="func-btn" style="left: 0; float: none;">点击下载手填分数表</button></a><br /> -->
 						<a href="sample/Arcaea 万能查分表6.1.0空白.xlsx" style="text-decoration: none;"><button class="func-btn" style="left: 0; float: none;">点击下载万能查分表</button></a><br />
 						<h3>!手填表只填写分数即可，单曲潜力值会自动计算!</h3><br>
